--- a/spring_boot/src/main/resources/shiro-realm.ini
+++ b/spring_boot/src/main/resources/shiro-realm.ini
@@ -1,4 +1,4 @@
-#声明一个 realm 
+#锟斤拷锟斤拷一锟斤拷 realm 
 testRealm=com.jnl.boot.web.shiro.ShiroTestRealm
-#指定 securityManager 的 realms 实现
+#指锟斤拷 securityManager 锟斤拷 realms 实锟斤拷
 securityManager.realms=$testRealm
