--- a/pro_web/pom.xml
+++ b/pro_web/pom.xml
@@ -69,6 +69,22 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>6.0.6</version>
 		</dependency>
+	  <dependency>
+		  <groupId>com.alibaba</groupId>
+		  <artifactId>dubbo</artifactId>
+		  <version>2.5.7</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.zookeeper</groupId>
+		  <artifactId>zookeeper</artifactId>
+		  <version>3.4.5</version>
+	  </dependency>
+	  <!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
+	  <dependency>
+		  <groupId>com.101tec</groupId>
+		  <artifactId>zkclient</artifactId>
+		  <version>0.10</version>
+	  </dependency>
 	</dependencies>
 	<build>
 		<plugins>
