--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -10,17 +10,17 @@
   <packaging>jar</packaging>
   <name>spring_boot</name>
 	    <dependencies>
-   	      	<dependency>
-	          	<groupId>org.springframework.boot</groupId>
-	          	<artifactId>spring-boot-starter-web</artifactId>
-	          	<version>1.5.7.RELEASE</version>
-      		</dependency>
-   	      	<dependency> 
-				 <groupId>org.springframework.boot</groupId> 
-				 <artifactId>spring-boot-starter-test</artifactId> 
-				 <scope>test</scope> 
-				 <version>1.5.7.RELEASE</version>
-			 </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>1.5.7.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <scope>test</scope>
+                <version>1.5.7.RELEASE</version>
+            </dependency>
 	        <dependency>
 	            <!-- Import dependency management from Spring Boot -->
 	            <groupId>org.springframework.boot</groupId>
@@ -52,19 +52,29 @@
 			<dependency>
 			    <groupId>mysql</groupId>
 			    <artifactId>mysql-connector-java</artifactId>
-		    <version>6.0.6</version>
-		</dependency>
-		 <dependency>  
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>  
-            <version>1.4.0</version>  
-        </dependency> 
-		<dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
-            <version>1.4.0</version>
-        </dependency>
-    </dependencies>
+		   		<version>6.0.6</version>
+			</dependency>
+			 <dependency>
+				<groupId>org.apache.shiro</groupId>
+				<artifactId>shiro-core</artifactId>
+				<version>1.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.shiro</groupId>
+				<artifactId>shiro-spring</artifactId>
+				<version>1.4.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-freemarker</artifactId>
+				<version>1.1.7.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-aop</artifactId>
+				<version>1.5.9.RELEASE</version>
+			</dependency>
+		</dependencies>
 	<build>
 	    <plugins>
 	        <plugin>
