--- a/spring_boot/src/main/resources/application.yml
+++ b/spring_boot/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://192.168.10.127:3306/pro?serverTimezone=UTC
+        url: jdbc:mysql://192.168.101.11:3306?serverTimezone=UTC
         username: root
         password: 123
         # 使用druid数据源
@@ -20,3 +20,7 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
+log4j:
+  logger:
+    org:
+      mybatis: DUBUG
