--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -74,6 +74,11 @@
 				<artifactId>spring-boot-starter-aop</artifactId>
 				<version>1.5.9.RELEASE</version>
 			</dependency>
+			<!--<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-jta-atomikos</artifactId>
+				<version>1.5.7.RELEASE</version>
+			</dependency>-->
 		</dependencies>
 	<build>
 	    <plugins>
