--- a/spring_boot/src/main/resources/application.yml
+++ b/spring_boot/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://192.168.101.11:3306?serverTimezone=UTC
-        username: root
-        password: 123
+        url: jdbc:mysql://192.168.70.87:3307/nwms?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useOldAliasMetadataBehavior=true
+        username: btc_user
+        password: PpEZqboiBp
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
