--- a/spring_boot/src/main/resources/shiro.ini
+++ b/spring_boot/src/main/resources/shiro.ini
@@ -1,12 +1,18 @@
-[main] 
+#[main]
 #自定义 authorizer 
-authorizer=org.apache.shiro.authz.ModularRealmAuthorizer 
+#authorizer=org.apache.shiro.authz.ModularRealmAuthorizer
 #自定义 permissionResolver 
 #permissionResolver=org.apache.shiro.authz.permission.WildcardPermissionResolver 
-permissionResolver=com.jnl.boot.web.shiro.BitAndWildPermission 
-authorizer.permissionResolver=$permissionResolver 
+#permissionResolver=com.jnl.boot.web.shiro.BitAndWildPermission
+#authorizer.permissionResolver=$permissionResolver
 #自定义 rolePermissionResolver 
-rolePermissionResolver=com.jnl.boot.web.shiro.MyRolePermission
-Resolver 
-authorizer.rolePermissionResolver=$rolePermissionResolver 
-securityManager.authorizer=$authorizer
+#rolePermissionResolver=com.jnl.boot.web.shiro.MyRolePermission
+#Resolver
+#authorizer.rolePermissionResolver=$rolePermissionResolver
+#securityManager.authorizer=$authorizer
+[users]
+zhang=123,role1,role2
+wang=123,role1
+[roles]
+role1=user:create,user:update
+role2=user:createuser:dele
