--- a/pro_web/pom.xml
+++ b/pro_web/pom.xml
@@ -75,15 +75,25 @@
 		  <version>2.5.7</version>
 	  </dependency>
 	  <dependency>
+		  <groupId>com.alibaba</groupId>
+		  <artifactId>fastjson</artifactId>
+		  <version>1.2.47</version>
+	  </dependency>
+	<!--  <dependency>
 		  <groupId>org.apache.zookeeper</groupId>
 		  <artifactId>zookeeper</artifactId>
 		  <version>3.4.5</version>
-	  </dependency>
+	  </dependency>-->
 	  <!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
 	  <dependency>
 		  <groupId>com.101tec</groupId>
 		  <artifactId>zkclient</artifactId>
 		  <version>0.10</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.rabbitmq</groupId>
+		  <artifactId>amqp-client</artifactId>
+		  <version>4.7.0</version>
 	  </dependency>
 	</dependencies>
 	<build>
